tests/negative/resource_amount_wrong_domain.ora
resource TokenUnit = u256;

contract ResourceAmountWrongDomain {
    storage var balances: map<address, Resource<TokenUnit>>;

    pub fn bad(from: address, to: address, amount: u256) {
        @move(balances[from], balances[to], amount);
    }
}
